# km-box

./: .gitignore  DEPLOYMENT_README.md  QUICK_TEST.md  README.md  deploy-pi-git.sh  deploy-pi.sh  git-push.ps1  hid_test.rs  km-box.code-workspace  simple_test.rs  sync-pi.sh  test_imports.rs  validate-code.sh
docs/: PHASE_2_SUMMARY.md  README.md  copilot_instructions.md  phase5_test_plan.md  pi_code_reference.md  project_log.md  uart_status_update.md
docs/.github/instructions/: Copilot.instructions.md
pi_code/: Cargo.toml  km_config.toml
pi_code/src/: main.rs  main_fixed.rs  main_new.rs  main_old.rs  test_event5.rs
teensy_code/: README.md  bidirectional_test.py  compile_commands.json  debug_main.cpp  platformio.ini  uart_bidirectional_test.py
teensy_code/src/: main.cpp
teensy_fw/: PHASE_1_SUMMARY.md  project_log.md
teensy_fw/src/: main.cpp
