[package]
name = "km_pi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "km_pi"
path = "src/main.rs"

[[bin]]
name = "hid_test"
path = "src/hid_test.rs"

[dependencies]
serialport = "4.2"
clap = { version = "4.0", features = ["derive"] }
hidapi = "2.6"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
